--- a/BE/package.json
+++ b/BE/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "koa": "^2.13.0",
     "nodemon": "^2.0.4"
   }
