--- a/BE/package.json
+++ b/BE/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "axios": "^0.20.0",
     "koa": "^2.13.0",
     "nodemon": "^2.0.4"
   }
